<resources>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications sent</string>
    <string name="notifications_options">Notifications options</string>
    <string name="charts">Charts</string>
    <string name="customui">Custom UI Notifications Options</string>
    <string name="others">Others</string>
    <string name="other">Other</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="about">About</string>
    <string name="sync_settings">Syncing settings&#8230;</string>
    <string name="brightness">Brightness</string>
    <string name="tweaking">Tweaking</string>
    <string name="widgets">Widgets</string>
    <string name="watchface">GreatFit / Calendar / Weather</string>
    <string name="stats">Stats</string>
    <string name="changelog">Changelog</string>
    <string name="rate_app">Rate App</string>
    <string name="enable">Enable</string>
    <string name="cancel">Cancel</string>
    <string name="select_unselect_all">Select/Unselect all</string>
    <string name="show_system_apps">Show system apps</string>
    <string name="replies">Replies</string>
    <string name="installed_apps">Installed applications</string>
    <string name="last_read">Last read</string>
    <string name="remaining_battery">Remaining battery</string>
    <string name="full_battery_in">Fully charged in</string>
    <string name="open_notifications_log">Open notifications log</string>
    <string name="notifications_log">Notifications log</string>
    <string name="delete">Delete</string>
    <string name="download">Download</string>
    <string name="deleting">Deleting</string>
    <string name="cant_delete_file">Can\'t delete file</string>
    <string name="add_new_reply">Add new reply</string>
    <string name="enter_the_text_you_want_as_an_answer">Enter the text you want as an answer</string>
    <string name="file_not_exists">File not exists</string>
    <string name="cant_uplaod_directory">Can\'t upload directory</string>
    <string name="sending">Sending</string>
    <string name="wait">please wait</string>
    <string name="file_choose_title">Choose one or more file</string>
    <string name="cant_upload_file">Can\'t upload file</string>
    <string name="cant_download_file">Can\'t download file</string>
    <string name="file_upload_canceled">File upload canceled</string>
    <string name="file_download_canceled">File download canceled</string>
    <string name="file_downloaded">File downloaded</string>
    <string name="notification_access">Notifications access</string>
    <string name="notification_access_not_enabled">Notification access not enabled</string>
    <string name="notification_access_enable">Enable</string>
    <string name="activity_about_notifications_test">Notifications test</string>
    <string name="customui_test">Custom UI</string>
    <string name="standard_test">Standard UI</string>
    <string name="battery_chart_title">Battery chart</string>
    <string name="heartrate_chart_title">Heart-rate chart</string>
    <string name="watch_info">Watch\'s information</string>
    <string name="last_charge">Since full charge</string>
    <string name="last_charge_no_info">Waiting for full charge</string>
    <string name="notification_block">Block</string>
    <string name="notification_continue">Continue</string>
    <string name="notification_group">Group</string>
    <string name="notification_local">Local</string>
    <string name="notification_ongoing">Ongoing</string>
    <string name="notification_return">Return</string>
    <string name="notification_package">Package</string>
    <string name="notification_voice">Voice</string>
    <string name="notification_maps">Maps</string>
    <string name="notification_ungroup">Ungroup</string>
    <string name="notification_localok">LOCALOK</string>
    <string name="notification_disabled">notific_off</string>
    <string name="notification_screenon">screenon</string>
    <string name="notification_screenlocked">screenlocked</string>
    <string name="telegram_channel">Telegram channel</string>
    <string name="support_email">Support email</string>
    <string name="project_github">Project on Github</string>
    <string name="activity_about_project_maintainer">Project Maintainer</string>
    <string name="activity_about_text">Coded with love {gmd-favorite}</string>
    <string name="activity_about_devs">Developers</string>
    <string name="activity_about_testers">Testers</string>
    <string name="translators">Translators</string>
    <string name="activity_watchface_need_greatfit">You need to have the watchface GreatFit or the widgets Calendar/Timeline installed on your watch for these options to be utilized</string>
    <string name="activity_watchface_send_data">Send phone\'s data to watch (battery, alarm, calendar)</string>
    <string name="activity_watchface_send_data_interval_prompt">Select interval time</string>
    <string name="activity_watchface_send_data_interval_summary">Send data frequency</string>
    <string name="activity_watchface_send_data_calendar_events_days_summary">Send calendar events for the following days:</string>
    <string name="activity_watchface_send_on_battery_change">Send data every time battery changes</string>
    <string name="activity_watchface_send_on_alarm_change">Send data every time alarm changes</string>
    <string name="activity_watchface_send_weather_data">Send weather data</string>
    <string name="activity_watchface_weather_options">Weather options</string>
    <string name="activity_watchface_send_weather_units">Weather units</string>
    <string name="activity_watchface_weather_real_feel">Show \"real feel\" instead of actual temperature</string>
    <string name="activity_watchface_last_time_sent">Last time sent</string>
    <string name="activity_watchface_data_send">Data sent</string>
    <string name="activity_watchface_send_data_now">Send data now</string>
    <string name="activity_stats_notifications_total">Total</string>
    <string name="activity_stats_notifications_in_the_last_hour">In the last hour</string>
    <string name="activity_stats_notifications_in_the_last_24_horus">In the last 24 hours</string>
    <string name="pref_enable_notifications_summary">Let AmazMod handle all the notifications.</string>
    <string name="pref_enable_notifications">Push notifications</string>
    <string name="pref_filter_notifications_by_packages">Selected apps</string>
    <string name="pref_filter_notifications_by_packages_summary">Only notifications from these apps will be sent to watch.</string>
    <string name="pref_battery_background_sync_interval">Battery background sync interval</string>
    <string name="pref_battery_background_sync_interval_summary">Set background battery sync interval.</string>
    <string name="pref_battery_chart_time_interval">Battery chart time range</string>
    <string name="pref_battery_chart_time_interval_summary">Set battery chart time range to display.</string>
    <string name="pref_battery_watch_alert">Watch battery alert</string>
    <string name="pref_battery_watch_alert_summary">Set watch\'s battery level bellow which you will get a battery notification.</string>
    <string name="pref_battery_phone_alert">Phone battery alert</string>
    <string name="pref_battery_phone_alert_summary">Set phone\'s battery level bellow which you will get a notification on watch. GreatFit/Calendar option "Send phone\'s data" needs to be enabled.</string>
    <string name="pref_notifications_replies_summary">Enter your custom replies.</string>
    <string name="pref_notifications_replies">Notification replies</string>
    <string name="pref_private_notifications_summary">Notification content will be hidden (and replies panel as well).</string>
    <string name="pref_private_notifications">Private notification content</string>
    <string name="pref_enable_notifications_when_screen_on_summary">Forward notifications to watch, when screen is ON.</string>
    <string name="pref_enable_notifications_when_screen_on">Send when screen is ON</string>
    <string name="pref_notifications_enable_custom_ui">Custom UI Notifications</string>
    <string name="pref_notifications_enable_custom_ui_summary">Notifications with the ability to reply.</string>
    <string name="pref_enable_maps_notification">Maps notifications</string>
    <string name="pref_enable_maps_notification_summary">Enable Google Maps notifications.</string>
    <string name="pref_notification_enable_sound">Notifications sound</string>
    <string name="pref_notification_enable_sound_summary">Enable sound for custom UI notification. To customize the sound put your mp3 renamed as \"amazmod_notification.mp3\" in this folder on verge \"/sdcard/Notifications/\"</string>
    <string name="pref_run_wizard">Welcome Presentation</string>
    <string name="pref_run_wizard_summary">Run the welcome presentation again.</string>
    <string name="pref_vibration_duration">Vibration duration</string>
    <string name="pref_vibration_duration_summary">Set vibration duration of notification screen.</string>
    <string name="pref_screen_timeout">Screen timeout</string>
    <string name="pref_screen_timeout_summary">Set duration of notification screen.</string>
    <string name="pref_disable_notifications_when_dnd">Respect DND mode</string>
    <string name="pref_disable_notifications_when_dnd_summary">Notifications will not be sent to watch when Do Not Disturb is detected.</string>
    <string name="pref_disable_remove_notifications">Keep notifications</string>
    <string name="pref_disable_remove_notifications_summary">Do not remove notification from watch when it is removed from phone.</string>
    <string name="pref_enable_voice_apps">Voice call notifications</string>
    <string name="pref_enable_voice_apps_summary">Messenger voice calls will send notifications to watch.</string>
    <string name="pref_enable_local_only">Local notifications</string>
    <string name="pref_enable_local_only_summary">Notifications without user actions will be sent to watch (eg. Google Weather reports). May also need ungroup ON.</string>
    <string name="pref_enable_notifications_when_locked">Send when phone is locked</string>
    <string name="pref_enable_notifications_when_locked_summary">Send notifications to watch if screen is on but phone is locked.</string>
    <string name="pref_notifications_enable_ungroup">Ungroup notifications</string>
    <string name="pref_notifications_enable_ungroup_summary">Notifications from the same sender will be separated (you will not be able to sync them though).</string>
    <string name="pref_disable_notifications_when_driving">Block notifications when driving</string>
    <string name="pref_disable_notifications_when_driving_summary">Do not send notifications to watch if phone is in driving mode.</string>
    <string name="pref_filters">Notifications filters</string>
    <string name="pref_enable_music_control_with_hardware_button">Enable hardware music control</string>
    <string name="activity_tweaking_brightness">Please note that Auto-brightness in watch must be disabled for this to work</string>
    <string name="file_explorer">File explorer</string>
    <string name="activity_about_extras">Extras</string>
    <string name="revoke_device_owner">Revoke device owner on watch</string>
    <string name="enable_low_power">Enable low power mode on watch</string>
    <string name="execute_shell_command">Execute a shell command</string>
    <string name="run">Run</string>
    <string name="search_title">Search</string>
    <string name="logs">Logs</string>
    <string name="clear_log">Clear Log</string>
    <string name="send_log">Send Log</string>
    <string name="generate_bundle">Generate Log Bundle</string>
    <string name="image_description">Image</string>
</resources>