<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group>
        <item android:title="@string/activity_about_notifications_test">
            <menu>
                <item
                    android:id="@+id/action_activity_about_custom_ui_test"
                    android:title="@string/customui_test" />
                <item
                    android:id="@+id/action_activity_about_standard_test"
                    android:title="@string/standard_test" />
                <item
                    android:id="@+id/action_activity_about_notification_test"
                    android:title="AmazfitNotification" />
            </menu>
        </item>
    </group>
    <group>
        <item android:title="@string/activity_about_extras">
            <menu>
                <item
                    android:id="@+id/action_activity_about_revoke_device_owner"
                    android:title="@string/revoke_device_owner" />
                <item
                    android:id="@+id/action_activity_about_low_power_mode"
                    android:title="@string/enable_low_power" />
            </menu>
        </item>
    </group>
</menu>