<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/outline_settings_black_36"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_tweaking"
            android:icon="@drawable/outline_build_black_36"
            android:title="@string/tweaking" />

        <item
            android:id="@+id/nav_file_explorer"
            android:icon="@drawable/outline_explore_black_36"
            android:title="@string/file_explorer"
            />

        <item
            android:id="@+id/nav_widgets"
            android:icon="@drawable/outline_watch_black_36"
            android:title="Widgets" />

        <item
            android:id="@+id/nav_watchface"
            android:icon="@drawable/outline_watch_black_36"
            android:title="@string/watchface" />

        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/outline_insert_chart_black_36"
            android:title="@string/stats" />
    </group>
    <group>
        <item
            android:id="@+id/nav_changelog"
            android:icon="@drawable/outline_list_black_36"
            android:title="@string/changelog" />

        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/outline_live_help_black_36"
            android:title="@string/faq" />
        <item
            android:id="@+id/nav_abount"
            android:icon="@drawable/outline_info_black_36"
            android:title="@string/about" />
    </group>
</menu>
