<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/search"
        android:title="@string/search_title"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>

    <item
        android:id="@+id/action_activity_notification_packges_selector_toggle_all"
        android:orderInCategory="0"
        android:title="@string/select_unselect_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_activity_notification_packages_selector_show_system"
        android:checkable="true"
        android:title="@string/show_system_apps" />

</menu>